[package]
name = "hey-share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-web = "4.2.1"
futures-util = "0.3.25"
once_cell = "1.17.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tokio = "1.24.1"
uuid = "1.2.2"
